[gd_scene load_steps=6 format=3 uid="uid://cmk0mxqxoj6hx"]

[ext_resource type="PackedScene" uid="uid://lm7flcenwth7" path="res://Scenes/UI/UIWindows/ui_window.tscn" id="1_8fwiu"]
[ext_resource type="PackedScene" uid="uid://c616c4mqeytmg" path="res://Scenes/UI/UIWindows/Interactables/Crafting/craftable.tscn" id="2_ehuhu"]
[ext_resource type="Script" path="res://Scenes/UI/UIWindows/Interactables/Crafting/crafting_base.gd" id="2_l06up"]
[ext_resource type="PackedScene" uid="uid://cp8sm2rgraqhm" path="res://Scenes/UI/UIWidgets/Buttons/ScalableButtons/scalable_button.tscn" id="3_kv3dh"]
[ext_resource type="LabelSettings" uid="uid://c02m0rv13xnjn" path="res://Assets/Fonts/base_label_16.tres" id="4_sa2gl"]

[node name="CraftingBase" instance=ExtResource("1_8fwiu")]
script = ExtResource("2_l06up")

[node name="WindowManager" parent="." index="0"]
clip_contents = true
offset_right = 398.0
offset_bottom = 361.0

[node name="NinePatchRect" parent="WindowManager" index="0"]
offset_right = -2.0
offset_bottom = 21.0

[node name="Craftable" parent="WindowManager" index="1" instance=ExtResource("2_ehuhu")]
layout_mode = 2
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 3.0
offset_top = 49.0
offset_right = 391.0
offset_bottom = 49.0

[node name="HBoxContainer" type="HBoxContainer" parent="WindowManager" index="2"]
layout_mode = 0
offset_left = 4.0
offset_top = 27.0
offset_right = 181.0
offset_bottom = 45.0
theme_override_constants/separation = 2

[node name="Craftable" parent="WindowManager/HBoxContainer" index="0" instance=ExtResource("3_kv3dh")]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="WindowManager/HBoxContainer/Craftable" index="1"]
layout_mode = 0
offset_left = 2.0
offset_top = 2.0
offset_right = 42.0
offset_bottom = 25.0
text = "Craftable"
label_settings = ExtResource("4_sa2gl")

[node name="NotCraftable" parent="WindowManager/HBoxContainer" index="1" instance=ExtResource("3_kv3dh")]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="WindowManager/HBoxContainer/NotCraftable" index="1"]
layout_mode = 0
offset_left = 2.0
offset_top = 2.0
offset_right = 42.0
offset_bottom = 25.0
text = "Not Craftable"
label_settings = ExtResource("4_sa2gl")

[connection signal="pressed" from="WindowManager/HBoxContainer/Craftable" to="." method="_on_craftable_pressed"]
[connection signal="pressed" from="WindowManager/HBoxContainer/NotCraftable" to="." method="_on_not_craftable_pressed"]

[editable path="WindowManager/Craftable"]
